--- a/public/500.html
+++ b/public/500.html
@@ -18,8 +18,13 @@
 
 <body>
   <!-- This file lives in public/500.html -->
+  <h1>FeedFiction</h1>
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>OOPS!</h1>
+    <p>That's the reason why we are in Alpha!</p>
+    <div>
+      Sorry about that. We've been notified about this issue and we'll take a look at it shortly.
+    </div>
   </div>
 </body>
 </html>
