fixed footer links

--- a/public/404.html
+++ b/public/404.html
@@ -52,7 +52,7 @@
     <!-- <h2>The Feeders:</h2> -->
     
       <h1>Sorry, the page you requested was not found. </h1>
-<p>Try checking the URL for errors, then hit refresh button on your browser. If you continue experience technical difficulties with the page you’re trying to reach please <a href='/contact'>contact us</a>.</p>
+<p>Try checking the URL for errors, then hit refresh button on your browser. If you continue to experience technical difficulties with the page you’re trying to reach please <a href='/contact'>contact us</a>.</p>
         
       </div>
     </div>
@@ -96,11 +96,11 @@
           <div id="footer-menu-links">
 
             <ul id="footer-nav">
-                <li><a href="http://localhost:3000/about">About us</a></li>
+                <li><a href="/about">About us</a></li>
   <li><a href="/terms">Terms</a></li>
       <li><a href="/privacy">Privacy</a></li>
       <li><a href="/help">Help</a></li>
-      <li><a href="http://localhost:3000/contacts/new">Contact us</a></li>
+      <li><a href="/contacts/new">Contact us</a></li>
 
             </ul>
 
