--- a/public/500.html
+++ b/public/500.html
@@ -91,11 +91,11 @@
           <div id="footer-menu-links">
 
             <ul id="footer-nav">
-                <li><a href="http://localhost:3000/about">About us</a></li>
+                <li><a href="/about">About us</a></li>
   <li><a href="/terms">Terms</a></li>
       <li><a href="/privacy">Privacy</a></li>
       <li><a href="/help">Help</a></li>
-      <li><a href="http://localhost:3000/contacts/new">Contact us</a></li>
+      <li><a href="/contacts/new">Contact us</a></li>
 
             </ul>
 
