--- a/public/404.html
+++ b/public/404.html
@@ -52,7 +52,7 @@
     <!-- <h2>The Feeders:</h2> -->
     
       <h1>Sorry, the page you requested was not found. </h1>
-<p>Try checking the URL for errors, then hit refresh button on your browser. If you continue to experience technical difficulties with the page you’re trying to reach please <a href='/contact'>contact us</a>.</p>
+<p>Try checking the URL for errors, then hit refresh button on your browser. If you continue to experience technical difficulties with the page you're trying to reach please <a href='/contact'>contact us</a>.</p>
         
       </div>
     </div>
